--- a/AmazonDemo/configs/config.properties
+++ b/AmazonDemo/configs/config.properties
@@ -1,4 +1,5 @@
 url=https://www.amazon.in/
+broswer=chrome
 implicityWait=10
 driverPath=C:\\Users\\bshik\\Documents\\java_jdk_jar\\drivers\\chromedriver.exe
 excelPath=C:\\Users\\bshik\\eclipse-workspace\\AmazonDemo\\src\\main\\java\\com\\testdata\\testdata.xls
